<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ru.vital.daily.view.model.ChatSheetViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:tabRippleColor="@color/color_ripple"
            app:tabIconTint="@color/tab_item_icon_color_selector"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabMaxWidth="80dp"
            app:tabMinWidth="80dp"
            app:tabMode="scrollable"
            app:tabPaddingEnd="4dp"
            app:tabPaddingStart="4dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_camera"
                android:layout="@layout/layout_tab_item"
                android:text="@string/sheet_camera" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_media"
                android:layout="@layout/layout_tab_item"
                android:text="@string/sheet_media" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_person_outline"
                android:layout="@layout/layout_tab_item"
                android:text="@string/sheet_contacts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_folder_outline"
                android:layout="@layout/layout_tab_item"
                android:text="@string/sheet_files" />

            <!--<com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_money"
                android:layout="@layout/layout_tab_item"
                android:text="@string/sheet_money" />-->

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_location"
                android:layout="@layout/layout_tab_item"
                android:text="@string/sheet_location" />

        </com.google.android.material.tabs.TabLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/color_separator"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</layout>