<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ru.vital.daily.view.model.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <TextView
                    style="@style/TextView.Title"
                    android:text="@string/registration" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ru.vital.daily.view.EditView
            android:id="@+id/editView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:focusable="false"
            app:showSearchIcon="false"
            android:onClick="@{() -> viewModel.onCountryClick()}"
            android:hint="@string/registration_hint_country"
            app:layout_constraintBottom_toTopOf="@+id/editView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <ru.vital.daily.view.EditView
            android:id="@+id/editView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:showSearchIcon="false"
            android:hint="@string/sign_in_hint_phone"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/editView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editView19" />

        <ru.vital.daily.view.EditView
            android:id="@+id/editView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:showSearchIcon="false"
            android:hint="@string/sign_in_hint_email"
            app:layout_constraintBottom_toTopOf="@+id/editView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editView18" />

        <ru.vital.daily.view.EditView
            android:id="@+id/editView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:showSearchIcon="false"
            android:hint="@string/registration_hint_first_name"
            app:layout_constraintBottom_toTopOf="@+id/editView22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editView20" />

        <ru.vital.daily.view.EditView
            android:id="@+id/editView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:showSearchIcon="false"
            android:hint="@string/registration_hint_last_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editView21" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextView.Medium"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editView18"
            app:layout_constraintStart_toStartOf="@+id/editView19"
            app:layout_constraintTop_toTopOf="@+id/editView18" />

        <Button
            android:id="@+id/button"
            style="@style/RoundedButton.Outlined"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/registration_there_is_account"
            android:onClick="@{() -> viewModel.goBack()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>